--- a/src/section_photo/section_photo.css
+++ b/src/section_photo/section_photo.css
@@ -40,6 +40,7 @@
     line-height: 38px;
     margin-bottom: -13px;
 }
+
 @media (min-width:855px) {
     .photo {
         max-width: 640px;
@@ -49,11 +50,13 @@
         justify-content: space-between;
     }
 
-    .attribute {
+    .atribute {
         flex: 1;
         max-width: 304px;
         position: relative;
         height: 338px;
+        color: black;
+        text-decoration: none;
     }
 
     .second_page_photos {
