add database to blog page

--- a/src/header/header.css
+++ b/src/header/header.css
@@ -2,8 +2,26 @@
     padding-top: 36px;
 }
 
-.desktop_menu {
+.desktop_menu,
+.hoover_menu {
     display: none;
+}
+
+
+.top_padding_burger:hover .hoover_menu {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    font-family: 'New York Small';
+    font-weight: 500;
+    gap: 5px;
+    font-size: 13px;
+    line-height: 170%;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-align: center;
+    margin-top: 10px;
+    margin-left: -25px;
 }
 
 .header {
@@ -17,8 +35,13 @@
 }
 
 .top_padding_burger {
-    padding: 24px 24px;
+    padding: 24px 40px;
 
+}
+
+.menu_link {
+    color: #000000;
+    text-decoration: none
 }
 
 @media (min-width:855px) {
@@ -50,8 +73,6 @@
 
     .menu_link {
         padding-bottom: 40px;
-        color: #000000;
-        text-decoration: none
     }
 
     .menu_link:hover {
