--- a/src/header/header.css
+++ b/src/header/header.css
@@ -7,7 +7,7 @@
     display: none;
 }
 
-.menu_link {
+.top_padding_burger:hover .hover_menu .menu_link {
     border: 0.5px solid black;
     background-color: Gainsboro;
 }
