--- a/src/read_next/read_next.css
+++ b/src/read_next/read_next.css
@@ -1,3 +1,25 @@
+.pagination_data {
+    display: flex;
+    gap: 20px;
+}
+
+.pagenation {
+    padding-top: 30px;
+    font-family: 'New York Extra Large';
+    font-size: 16px;
+    line-height: 38px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.pagenation_button {
+    appearance: none;
+    border: 0;
+    border-radius: 5px;
+    background: black;
+    color: #fff;
+}
+
 .additional_articles {
     margin-top: 91px;
     border-top: 2px solid #000000;
@@ -54,6 +76,7 @@
         margin-top: 132px;
     }
 }
+
 @media (min-width:1024px) {
     .photo {
         padding-top: 27px;
