--- a/src/read_next/read_next.css
+++ b/src/read_next/read_next.css
@@ -1,18 +1,17 @@
-.pagination_data {
+.pagination_data_post {
     display: flex;
     gap: 20px;
 }
 
-.pagenation {
+.pagenation_post {
     padding-top: 30px;
     font-family: 'New York Extra Large';
     font-size: 16px;
     line-height: 38px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 40%;
 }
 
-.pagenation_button {
+.pagenation_button_post {
     appearance: none;
     border: 0;
     border-radius: 5px;
@@ -89,5 +88,9 @@
         margin-top: 34px;
         color: black;
         text-decoration: none;
+    }
+
+    .pagenation_post {
+        margin-left: 45%;
     }
 }
