--- a/src/read_next/read_next.css
+++ b/src/read_next/read_next.css
@@ -9,7 +9,7 @@
     border-radius: 5px;
     padding: 0 8px;
 }
-.pagenation_post {
+.pagination_post {
     margin-top: 60px;
     font-family: 'New York Extra Large';
     font-size: 16px;
@@ -19,7 +19,7 @@
     justify-content: center;
 }
 
-.pagenation_button_post {
+.pagination_button_post {
     appearance: none;
     border: 0;
     border-radius: 5px;
@@ -83,7 +83,7 @@
         margin-top: 132px;
     }
 
-    .pagenation_post {
+    .pagination_post {
         margin-left: 40%;
     }
 }
@@ -102,7 +102,7 @@
         text-decoration: none;
     }
 
-    .pagenation_post {
+    .pagination_post {
         margin-left: 45%;
     }
 }
