--- a/src/section_photo/section_photo.css
+++ b/src/section_photo/section_photo.css
@@ -14,7 +14,7 @@
     gap: 20px;
 }
 
-.pagenation {
+.pagination {
     margin-top: 30px;
     font-family: 'New York Extra Large';
     font-size: 16px;
@@ -23,7 +23,7 @@
     justify-content: center;
 }
 
-.pagenation_button {
+.pagination_button {
     appearance: none;
     border: 0;
     border-radius: 5px;
@@ -109,7 +109,7 @@
 
 @media(min-width:1024px) {
 
-    .pagenation {
+    .pagination {
         justify-content: center;
     }
 }
