--- a/src/section_photo/section_photo.css
+++ b/src/section_photo/section_photo.css
@@ -6,7 +6,6 @@
     max-width: 640px;
     text-align: center;
     padding-top: 56px;
-    position: relative;
 }
 
 .photo_home_page {
@@ -35,6 +34,8 @@
 }
 
 .atribute_home_page {
+    margin-left: auto;
+    margin-right: auto;
     text-decoration: none;
     color: black;
 }
