--- a/src/header/header.css
+++ b/src/header/header.css
@@ -1,87 +1,86 @@
 .top_photo {
-    padding-top: 36px;
+  padding-top: 36px;
 }
 
 .desktop_menu,
 .hover_menu {
-    display: none;
+  display: none;
 }
 
 .top_padding_burger:hover .hover_menu .menu_link {
-    border: 0.5px solid black;
-    background-color: Gainsboro;
+  border: 0.5px solid black;
+  background-color: Gainsboro;
 }
 
 .top_padding_burger:hover .hover_menu {
-border: 0.5px solid black;
-    z-index: 2;
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    font-family: 'New York Small';
-    font-weight: 500;
-    gap: 5px;
-    font-size: 13px;
-    line-height: 170%;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    text-align: center;
-    margin-top: 10px;
-    margin-left: -25px;
+  border: 0.5px solid black;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  font-family: 'New York Small';
+  font-weight: 500;
+  gap: 5px;
+  font-size: 13px;
+  line-height: 170%;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-align: center;
+  margin-top: 10px;
+  margin-left: -25px;
 }
 
 .header {
-    display: flex;
-    justify-content: space-between;
-    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.16);
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.16);
 }
 
 .top_padding_nordic {
-    padding: 24px 0px 21px 20px;
+  padding: 24px 0px 21px 20px;
 }
 
 .top_padding_burger {
-    padding: 24px 40px;
-
+  padding: 24px 40px;
 }
 
 .menu_link {
-    color: #000000;
-    text-decoration: none
+  color: #000000;
+  text-decoration: none;
 }
 
-@media (min-width:855px) {
-    .top_padding_burger {
-        padding: 35px 30px;
-    }
+@media (min-width: 855px) {
+  .top_padding_burger {
+    padding: 35px 30px;
+  }
 }
 
-@media (min-width:1024px) {
-    .desktop_menu {
-        display: flex;
-        gap: 32px;
-        font-family: 'New York Small';
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 170%;
-        letter-spacing: 1.92px;
-        text-transform: uppercase;
-        padding: 59px 61px 0px 0px;
-    }
+@media (min-width: 1024px) {
+  .desktop_menu {
+    display: flex;
+    gap: 32px;
+    font-family: 'New York Small';
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 170%;
+    letter-spacing: 1.92px;
+    text-transform: uppercase;
+    padding: 59px 61px 0px 0px;
+  }
 
-    .top_padding_burger {
-        display: none;
-    }
+  .top_padding_burger {
+    display: none;
+  }
 
-    .top_padding_nordic {
-        padding: 52px 0px 0px 63px;
-    }
+  .top_padding_nordic {
+    padding: 52px 0px 0px 63px;
+  }
 
-    .menu_link {
-        padding-bottom: 40px;
-    }
+  .menu_link {
+    padding-bottom: 40px;
+  }
 
-    .menu_link:hover {
-        border-bottom: 2px solid #000000;
-    }
+  .menu_link:hover {
+    border-bottom: 2px solid #000000;
+  }
 }
